package abstractclasses;

import interfaces.UserInterface;

public abstract class AbstractUserInterface implements UserInterface {

}
